# padocc

./: .buildinfo  .gitignore  README.md  allocation.html  assess-overview.html  assess.html  assess.py  assessor.html  cci_water.html  compute.html  deep_dive.html  dev-guide.html  errors.html  examples.html  execution-source.html  execution.html  extras.html  genindex.html  group_run.py  group_source.html  groups.html  index.html  init.html  inspiration.html  misc_source.html  mixins.html  objects.inv  phase_source.html  phases.html  pipeline-overview.html  pipeline-source.html  project_source.html  projects.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  scan.html  search.html  searchindex.js  (+9 more)
_sources/: assess-overview.rst.txt  assess.rst.txt  assessor.rst.txt  compute.rst.txt  deep_dive.rst.txt  errors.rst.txt  examples.rst.txt  execution.rst.txt  group_source.rst.txt  index.rst.txt  init.rst.txt  misc_source.rst.txt  pipeline-source.rst.txt  project_source.rst.txt  projects.rst.txt  serial-process.rst.txt  start.rst.txt  validate.rst.txt  ~dev-guide.rst.txt
archive/: copy_refs.py  create_cfgs.py
batch/: README.md  cmip6_cfg.sh  group_run.py  make_csvs.py  phase.sbatch.template  wide_config.py
binder/: environment.yml
builder/: assess.py  single_run.py
config/: setup-cci.sh  setup-cmip6.sh  setup-metoff.sh  setup-project.sh.template
core/: ceda_staff.html  cli.html  complex_operation.html  extras.html  inspiration.html  installation.html  interactive.html  interactive_deprecated.html  operations.html  operations_deprecated.html  (+2 more)
(+573 files in other folders)
