[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python=">=3.7"
name="padocc"
version="1.3"
dynamic = ["dependencies"]
authors = [{name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"}]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["padocc"]